--- a/SalvagerEngine.csproj
+++ b/SalvagerEngine.csproj
@@ -45,7 +45,10 @@
     <Compile Include="Input\InputManager.cs" />
     <Compile Include="Objects\GameObject.cs" />
     <Compile Include="Objects\Graphics\GraphicsObject.cs" />
+    <Compile Include="Objects\Graphics\Sprite.cs" />
+    <Compile Include="Objects\PhysicalObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tools\DrawManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="OpenTK">
