--- a/SalvagerEngine.csproj
+++ b/SalvagerEngine.csproj
@@ -42,18 +42,22 @@
     <Compile Include="Components\Component.cs" />
     <Compile Include="Components\Level.cs" />
     <Compile Include="Content\ContentManager.cs" />
+    <Compile Include="Games\DesktopGame.cs" />
     <Compile Include="Games\SalvagerGame.cs" />
     <Compile Include="Games\WindowsGame.cs" />
     <Compile Include="Input\InputManager.cs" />
     <Compile Include="Objects\Effects\EffectObject.cs" />
     <Compile Include="Objects\GameObject.cs" />
+    <Compile Include="Objects\Graphics\Animation.cs" />
     <Compile Include="Objects\Graphics\GraphicsObject.cs" />
     <Compile Include="Objects\Graphics\Sprite.cs" />
+    <Compile Include="Objects\Graphics\Parallax.cs" />
     <Compile Include="Objects\PhysicalObject.cs" />
     <Compile Include="Objects\Physics\Collisions\Circle.cs" />
     <Compile Include="Objects\Physics\Collisions\CollisionManager.cs" />
     <Compile Include="Objects\Physics\Collisions\CollisionObject.cs" />
     <Compile Include="Objects\Effects\Rotator.cs" />
+    <Compile Include="Objects\Physics\Gravity.cs" />
     <Compile Include="Objects\Physics\PhysicsEffect.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\DrawManager.cs" />
@@ -72,6 +76,8 @@
     <Reference Include="Lidgren.Network">
       <HintPath>$(MSBuildExtensionsPath)\..\MonoGame\v3.0\Assemblies\WindowsGL\Lidgren.Network.dll</HintPath>
     </Reference>
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="Tao.Sdl">
       <HintPath>$(MSBuildExtensionsPath)\..\MonoGame\v3.0\Assemblies\WindowsGL\Tao.Sdl.dll</HintPath>
     </Reference>
