--- a/SalvagerEngine.Framework/SalvagerEngine.Framework.csproj
+++ b/SalvagerEngine.Framework/SalvagerEngine.Framework.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B7C00AB2-F28F-4B9C-8CD8-C2708F06EF0E}</ProjectGuid>
+    <ProjectGuid>{05DB45EB-20C7-48AA-9DFD-8E2F37CA4757}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SalvagerEngine.Storage</RootNamespace>
-    <AssemblyName>SalvagerEngine.Storage</AssemblyName>
+    <RootNamespace>SalvagerEngine.Framework</RootNamespace>
+    <AssemblyName>SalvagerEngine.Framework</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -33,9 +33,13 @@
     <ApplicationIcon>logo.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Expression.Drawing, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="MonoGame.Framework, Version=3.3.0.2238, Culture=neutral, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,14 +47,40 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Content\SalvagerContentManager.cs" />
-    <Compile Include="Files\BaseFile.cs" />
-    <Compile Include="Files\LockFile.cs" />
-    <Compile Include="Files\ItemFile.cs" />
+    <Compile Include="Components\Camera.cs" />
+    <Compile Include="Components\Component.cs" />
+    <Compile Include="Components\Level.cs" />
+    <Compile Include="Games\DesktopGame.cs" />
+    <Compile Include="Games\SalvagerGame.cs" />
+    <Compile Include="Games\WindowsGame.cs" />
+    <Compile Include="Input\InputManager.cs" />
+    <Compile Include="Objects\Effects\EffectObject.cs" />
+    <Compile Include="Objects\Effects\Rotator.cs" />
+    <Compile Include="Objects\GameObject.cs" />
+    <Compile Include="Objects\Graphics\Animation.cs" />
+    <Compile Include="Objects\Graphics\GraphicsObject.cs" />
+    <Compile Include="Objects\Graphics\Parallax.cs" />
+    <Compile Include="Objects\Graphics\Sprite.cs" />
+    <Compile Include="Objects\Managers\CollisionManager.cs" />
+    <Compile Include="Objects\PhysicalObject.cs" />
+    <Compile Include="Objects\Physics\Collisions\Circle.cs" />
+    <Compile Include="Objects\Physics\Collisions\CollisionObject.cs" />
+    <Compile Include="Objects\Physics\Gravity.cs" />
+    <Compile Include="Objects\Physics\PhysicsEffect.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="logo.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SalvagerEngine.Storage\SalvagerEngine.Storage.csproj">
+      <Project>{b7c00ab2-f28f-4b9c-8cd8-c2708f06ef0e}</Project>
+      <Name>SalvagerEngine.Storage</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SalvagerEngine.Utilities\SalvagerEngine.Utilities.csproj">
+      <Project>{32bbb321-bb21-4f66-b49a-d337c1700acf}</Project>
+      <Name>SalvagerEngine.Utilities</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
