--- a/SalvagerEngine.Utilities/SalvagerEngine.Utilities.csproj
+++ b/SalvagerEngine.Utilities/SalvagerEngine.Utilities.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B7C00AB2-F28F-4B9C-8CD8-C2708F06EF0E}</ProjectGuid>
+    <ProjectGuid>{32BBB321-BB21-4F66-B49A-D337C1700ACF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SalvagerEngine.Storage</RootNamespace>
-    <AssemblyName>SalvagerEngine.Storage</AssemblyName>
+    <RootNamespace>SalvagerEngine.Utilities</RootNamespace>
+    <AssemblyName>SalvagerEngine.Utilities</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -34,6 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework, Version=3.3.0.2238, Culture=neutral, processorArchitecture=MSIL" />
+    <Reference Include="OpenTK, Version=1.1.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,10 +44,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Content\SalvagerContentManager.cs" />
-    <Compile Include="Files\BaseFile.cs" />
-    <Compile Include="Files\LockFile.cs" />
-    <Compile Include="Files\ItemFile.cs" />
+    <Compile Include="Extensions\ColorExtensions.cs" />
+    <Compile Include="Extensions\FloatExtensions.cs" />
+    <Compile Include="Extensions\MonoGameExtensions.cs" />
+    <Compile Include="Extensions\SpriteBatchExtensions.cs" />
+    <Compile Include="Extensions\TypeExtensions.cs" />
+    <Compile Include="Extensions\Vector2Extensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
