--- a/SalvagerEngine.Storage/SalvagerEngine.Storage.csproj
+++ b/SalvagerEngine.Storage/SalvagerEngine.Storage.csproj
@@ -53,6 +53,12 @@
   <ItemGroup>
     <Content Include="logo.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SalvagerEngine.Interfaces\SalvagerEngine.Interfaces.csproj">
+      <Project>{2c0c9382-b528-4759-88f6-11480be05705}</Project>
+      <Name>SalvagerEngine.Interfaces</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
